Fix timefield, and add read button

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,5 +53,17 @@
       	
  	 </div>	
 
+<style type="text/css">
+  button.vote {
+    background: transparent;
+    border: 0;
+  width: 32px;
+}
+
+button.vote:hover {
+    cursor: pointer;
+}
+
+</style>
 </body>
 </html>
