--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% block content %}
 
 <br>
@@ -20,20 +21,46 @@
                         {% csrf_token %}
                         <input type="hidden"  name="article" value="{{ news.pk }}" />
                         <input type="hidden"  name="voted_by"  value="{{ user.pk }}" />
-                    <button><img src="/static/vote_up.png"></button>
+                    {% if not user.is_authenticated %}
+                    <button title="Please login to vote" class="vote"><img src="/static/vote_up.png"></button>
+
+                    {% elif news.pk not in voted %}
+                <button title="Vote up" class="vote"><img src="/static/vote_up.png"></button>
+               {% else %}
+               <button title="Down Vote" class="vote"><img src="/static/voted_up.png"></button>
+               {% endif %}
                     </form>
                 </div>
                 <div class="col-md-10 col-lg-10">
                     <h4><strong>{{ news.title }}</strong></h4>
                     <span>
-                        <p>{{ news.up_votes}} points by {{ news.posted_by }} {{ news.posted_on }} | {{ news.comments }} comments</p>
+                        <p>{{ news.up_votes}} points by <a href="{{ news.posted_by }}">{{ news.posted_by }}</a> {{ news.posted_on |naturaltime }} | <a href="{{ news.hn_url }}">{{ news.comments }} comments</a></p>
                     </span>
                 </div>
                 </div>
             </div>
             <div class="col-md-3 col-lg-3">
-                <button class="btn btn-sm btn-danger">delete</button>
-                <button class="btn btn-sm btn-warning">mark as read</button>
+                 {% if user.is_authenticated %}
+                    <form method="post" action="{% url 'read' %}" class="read_form">
+                        {% csrf_token %}
+                        <input type="hidden"  name="article" value="{{ news.pk }}" />
+                        <input type="hidden"  name="read_by"  value="{{ user.pk }}" />
+                   
+
+                       {% if news.pk in read %}
+                    <button title="click to undo" class="btn btn-sm btn-success">marked as read</button>
+                        {% else %}                
+                        <button class="btn btn-sm btn-warning">mark as read</button>
+                        {% endif %}
+                    </form>
+                    <form method="post" action="{% url 'delete' %}" class="read_form">
+                        {% csrf_token %}
+                        <input type="hidden"  name="article" value="{{ news.pk }}" />
+                        <input type="hidden"  name="deleted_by"  value="{{ user.pk }}" />
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+
+                    {% endif %}
             </div>
              {% endfor %}
         </div> 
