--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-3 col-lg-3">
                  {% if user.is_authenticated %}
-                    <form method="post" action="{% url 'read' %}" class="read_form">
+                    <form method="post" action="{% url 'read' %}">
                         {% csrf_token %}
                         <input type="hidden"  name="article" value="{{ news.pk }}" />
                         <input type="hidden"  name="read_by"  value="{{ user.pk }}" />
@@ -52,6 +52,15 @@
                         {% else %}                
                         <button class="btn btn-sm btn-warning">mark as read</button>
                         {% endif %}
+                    </form>
+
+                    <form method="post" action="{% url 'delete' %}">
+                        {% csrf_token %}
+                        <input type="hidden"  name="article" value="{{ news.pk }}" />
+                        <input type="hidden"  name="deleted_by"  value="{{ user.pk }}" />
+                                
+                        <button class="btn btn-sm btn-danger">Delete</button>
+    
                     </form>
                     {% endif %}
             </div>
